Modules/Database/main.tf
##Database2##

#Create Database Security Group
resource "aws_security_group" "database_sg" {
  name        = "Database_SG"
  description = "Allow inbound traffic from ALB"
  vpc_id      = var.vpc_id

  ingress {
    description     = "Allow traffic from application layer"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [var.app_sg]
  }
  
   egress {
    from_port   = 32768
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "db-SG"
  }
  
  lifecycle {
    # Necessary if changing 'name' or 'name_prefix' properties.
    create_before_destroy = true
  }
}

#Create database
resource "aws_db_instance" "week22db" {
  allocated_storage      = 10
  db_subnet_group_name   = aws_db_subnet_group.week22db.id
  engine                 = "mysql"
  engine_version         = "8.0.20"
  instance_class         = "db.t2.micro"
  multi_az               = false
  name                   = "db_name"
  username               = "username"
  password               = "password"
  skip_final_snapshot    = true
  vpc_security_group_ids = [aws_security_group.database_sg.id]
}

resource "aws_db_subnet_group" "week22db" {
  name       = "week22db"
  subnet_ids = var.database_subnet

  tags = {
    Name = "My DB subnet group"
  }
}
